# scratch2c

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: fibonacci.sb3  fizz_buzz.sb3  swap_variables.sb3
runtime/: scratch_runtime.h
scratch2c/: __init__.py  __main__.py  cli.py  ir.py  ir_builder.py  reader.py  type_inference.py
scratch2c/codegen/: __init__.py  base.py  kernel.py  userspace.py
tests/: conftest.py  test_codegen_kernel.py  test_codegen_userspace.py  test_ir_builder.py  test_reader.py  test_type_inference.py
tests/fixtures/: fibonacci.json
wiki/: Adding-Backends.md  Adding-Opcodes.md  Architecture.md  Code-Generation.md  Getting-Started.md  Home.md  Intermediate-Representation.md  Known-Limitations.md  Runtime-Library.md  Troubleshooting.md  Type-System.md  sb3-File-Format.md
